# celery-fastapi-demo

./: README.md
celery_practice/: app.py  main.py  pyproject.toml  readme.md  worker.py
celery_practice/api/: ctl.py  dao.py  dto.py  svc.py
