[tool.poetry]
name = "celery-practice"
version = "0.1.0"
description = ""
authors = ["or-m-or <htth815@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.10"
fastapi = "^0.104.0"
uvicorn = "^0.23.2"
celery = "^5.3.4"
redis = "^5.0.1"
flower = "^2.0.1"
sqlalchemy = "^2.0.22"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
